--- a/src/components/Small Components/Buttons/blue-button.scss
+++ b/src/components/Small Components/Buttons/blue-button.scss
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: center;
 	border-radius: 80px;
-	width: 512px;
+	width: fit-content;
 	height: 56px;
 	background: #1a56ff;
 
